# data-science

./: .buildinfo  .gitignore  README.md  altair-intro.html  boston-house.html  genindex.html  intro.html  iris-data.html  markdown-notebooks.html  markdown.html  medical-data.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  sonar-mines.html
2048-solver/: solver.html
_sources/: boston-house.ipynb  iris-data.ipynb  sonar-mines.ipynb
_sources/2048-solver/: solver.ipynb
_sources/gan/: keras-cycleGAN-tutorial.ipynb  monet-cyclegant-tutorial.ipynb  monet-style-gan.ipynb
_sources/statistics/: elements-of-statistical-learning.ipynb
_sources/store-sales-time-series-forecasting/: store-sales.ipynb
gan/: keras-cycleGAN-tutorial.html  monet-cyclegant-tutorial.html  monet-style-gan.html
myfirstbook/: _config.yml  _toc.yml  altair-intro.ipynb  finalized_model.sav  medical-data.ipynb  sonar-mines.ipynb
myfirstbook/_build/.doctrees/: altair-intro.doctree  boston-house.doctree  environment.pickle  intro.doctree  iris-data.doctree  markdown-notebooks.doctree  markdown.doctree  medical-data.doctree  notebooks.doctree  sonar-mines.doctree
myfirstbook/_build/html/: .buildinfo  altair-intro.html  intro.html  (+6 more)
myfirstbook/store-sales-time-series-forecasting/: selected_features.txt  store-sales.ipynb
myfirstbook/titanic-decision-tree/: titanic-decision-tree.ipynb  titanic-scratch.ipynb
statistics/: elements-of-statistical-learning.html
store-sales-time-series-forecasting/: store-sales.html
titanic-decision-tree/: titanic-decision-tree.html
(+17 files in other folders)
