[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["saralsy <sara.siye.liu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^1.0.2"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
polars = "^1.6.0"
altair = "^5.4.1"
plotly = "^5.24.0"
ghp-import = "^2.1.0"
vega-datasets = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
